--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=4321
-spring.datasource.url=jdbc:postgresql://flightdb.cxlcc0rkdt4u.ap-south-1.rds.amazonaws.com:5432/flightbooking
+
+spring.datasource.url=jdbc:postgresql://database:5432/flight
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
