--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,5 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_DB: flight
+      POSTGRES_DB: sprint2
       POSTGRES_PASSWORD: postgres
