--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-
-spring.datasource.url=jdbc:postgresql://database:5432/sprint2
+#spring.datasource.url=jdbc:postgresql://database:5432/sprint2
+spring.datasource.url=jdbc:postgresql://flight.clwxyqpvnfgn.ap-south-1.rds.amazonaws.com:5432/sprint2
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
